# power-notify

./: .gitignore  Cargo.toml  README.md  config.json.temlate
src/: main.rs
src/mod/: json_config.rs  mod.rs  tg_bot.rs
