[package]
name = "power-notify"
authors = ['Parfenov I.V.']
version = '0.0.1'
edition = '2021'

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "rt"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
reqwest = "0.11.23"